feat: Authorize controller with tests.
